@@ -1,26 +1,20 @@
 package com.thevoxelbox.voxelsniper.brush;
 
-import com.google.common.base.Objects;
-import com.thevoxelbox.voxelsniper.VoxelMessage;
 import com.thevoxelbox.voxelsniper.snipe.SnipeData;
 import com.thevoxelbox.voxelsniper.snipe.Undo;
 import com.thevoxelbox.voxelsniper.util.Messages;
-import com.thevoxelbox.voxelsniper.util.UndoDelegate;
-
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-import java.util.stream.Collectors;
-
+import com.thevoxelbox.voxelsniper.util.VoxelMessage;
+import com.thevoxelbox.voxelsniper.voxelsniper.block.BlockFace;
+import com.thevoxelbox.voxelsniper.voxelsniper.block.IBlock;
+import com.thevoxelbox.voxelsniper.voxelsniper.blockstate.IBlockState;
+import com.thevoxelbox.voxelsniper.voxelsniper.material.VoxelMaterial;
+import com.thevoxelbox.voxelsniper.voxelsniper.treeType.VoxelTreeType;
 import net.kyori.adventure.text.Component;
 import net.kyori.adventure.text.TextComponent;
 import net.kyori.adventure.text.format.NamedTextColor;
 
-import org.bukkit.Material;
-import org.bukkit.TreeType;
-import org.bukkit.block.Block;
-import org.bukkit.block.BlockFace;
-import org.bukkit.block.BlockState;
+import java.util.Arrays;
+import java.util.List;
 
 /**
  * http://www.voxelwiki.com/minecraft/Voxelsniper#The_Tree_Brush
@@ -29,7 +23,7 @@ import org.bukkit.block.BlockState;
  */
 public class TreeSnipeBrush extends Brush {
 
-    private TreeType treeType = TreeType.TREE;
+    private VoxelTreeType treeType = VoxelTreeType.TREE;
 
     /**
      *
@@ -38,24 +32,25 @@ public class TreeSnipeBrush extends Brush {
         this.setName("Tree Snipe");
     }
 
-    @SuppressWarnings("deprecation")
-    private void single(final SnipeData v, Block targetBlock) {
-        UndoDelegate undoDelegate = new UndoDelegate(targetBlock.getWorld());
-        Block blockBelow = targetBlock.getRelative(BlockFace.DOWN);
-        BlockState currentState = blockBelow.getState();
-        undoDelegate.setBlock(blockBelow);
-        blockBelow.setType(Material.GRASS);
-        this.getWorld().generateTree(targetBlock.getLocation(), this.treeType, undoDelegate);
-        Undo undo = undoDelegate.getUndo();
-        blockBelow.setBlockData(currentState.getBlockData().getMaterial().createBlockData(), true);
-        undo.put(blockBelow);
+    private void single(final SnipeData v, IBlock targetBlock) {
+        Undo undo = new Undo();
+
+        IBlock blockBelow = targetBlock.getRelative(BlockFace.DOWN);
+        IBlockState currentState = blockBelow.getState();
+        undo.put(currentState);
+        blockBelow.setMaterial(VoxelMaterial.GRASS_BLOCK, false);
+
+        this.getWorld().generateTree(targetBlock.getLocation(), this.treeType, undo);
+
+        blockBelow.setBlockData(currentState.getBlockData(), false);
+
         v.owner().storeUndo(undo);
     }
 
     private int getYOffset() {
         // getMaxHeight() is the same as getTargetBlock().getWorld().getMaxHeight()
         for (int i = 1; i < (getMaxHeight() - 1 - getTargetBlock().getY()); i++) {
-            if (Objects.equal(getTargetBlock().getRelative(0, i + 1, 0).getType(), Material.AIR)) {
+            if (getTargetBlock().getRelative(0, i + 1, 0).getMaterial().isAir()) {
                 return i;
             }
         }
@@ -66,13 +61,15 @@ public class TreeSnipeBrush extends Brush {
         TextComponent.Builder printout = Component.text();
 
         boolean delimiterHelper = true;
-        for (final TreeType treeType : TreeType.values()) {
-            if (delimiterHelper) {
-                delimiterHelper = false;
-            } else {
-                printout.append(Component.text(", ").color(NamedTextColor.WHITE));
+        for (final VoxelTreeType treeType : VoxelTreeType.values()) {
+            if (treeType.isSupported()) {
+                if (delimiterHelper) {
+                    delimiterHelper = false;
+                } else {
+                    printout.append(Component.text(", ").color(NamedTextColor.WHITE));
+                }
+                printout.append(Component.text(treeType.name().toLowerCase()).color(treeType.equals(this.treeType) ? NamedTextColor.GRAY : NamedTextColor.DARK_GRAY));
             }
-            printout.append(Component.text(treeType.name().toLowerCase()).color(treeType.equals(this.treeType) ? NamedTextColor.GRAY : NamedTextColor.DARK_GRAY));
         }
 
         vm.custom(printout);
@@ -80,7 +77,7 @@ public class TreeSnipeBrush extends Brush {
 
     @Override
     protected final void arrow(final SnipeData v) {
-        Block targetBlock = getTargetBlock().getRelative(0, getYOffset(), 0);
+        IBlock targetBlock = getTargetBlock().getRelative(0, getYOffset(), 0);
         this.single(v, targetBlock);
     }
 
@@ -103,8 +100,11 @@ public class TreeSnipeBrush extends Brush {
         }
 
         try {
-            this.treeType = TreeType.valueOf(params[0].toUpperCase());
-            this.printTreeType(v.getVoxelMessage());
+            this.treeType = VoxelTreeType.valueOf(params[0].toUpperCase());
+            if (treeType.isSupported())
+                this.printTreeType(v.getVoxelMessage());
+            else
+                throw new IllegalArgumentException("Not supported");
         } catch (Exception e) {
             v.getVoxelMessage().brushMessage(Messages.TREESNIPE_BRUSH_MESSAGE.replace("%triggerHandle%", triggerHandle));
         }
@@ -113,7 +113,7 @@ public class TreeSnipeBrush extends Brush {
     @Override
     public List<String> registerArguments() {
 
-        return new ArrayList<>(Arrays.stream(TreeType.values()).map(e -> e.name()).collect(Collectors.toList()));
+        return Arrays.stream(VoxelTreeType.values()).filter(VoxelTreeType::isSupported).map(Enum::name).toList();
     }
 
     @Override
